--- a/pages/net/netBind.wxss
+++ b/pages/net/netBind.wxss
@@ -56,10 +56,9 @@
   z-index: 2;
   left: 50%;
   bottom: 200rpx;
-  width: 160rpx;
-  height: 160rpx;
+  width: 120rpx;
+  height: 120rpx;
   margin-left: -80rpx;
-  border-radius: 160rpx;
   animation: sway 10s ease-in-out infinite;
   opacity: .95;
 }
@@ -109,6 +108,7 @@
   to {opacity: 1; transform: translate3d(0,0,0); }
 }
 form {
+  margin-top: 100rpx;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -251,4 +251,15 @@ form {
 }
 page .wx-video-bar{
   display: none;
+}
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 30rpx 30rpx 30rpx;
 }
