--- a/pages/bookSearch/index.wxss
+++ b/pages/bookSearch/index.wxss
@@ -1,6 +1,17 @@
 /* pages/bookSearch/index.wxss */
 @import "../common/weui.wxss";
 
+
+.login-btn {
+  margin-top: 20rpx;
+  font-size: 9pt;
+  text-align: center;
+  background-color: #7acfa6;
+  border-radius: 25rpx;
+  border-bottom: 2px solid #4fc08d;
+  color: #fff;
+}
+
 .ads {
   padding: 30rpx 15rpx 30rpx 15rpx;
 }
@@ -168,6 +179,11 @@
 .main-card-item#sdf {
   /*background-image: url('/images/index/sdf-bg.png');*//*微信暂不支持静态bgimg文件，改用服务器url*/
   background-image: url('https://i.loli.net/2019/06/22/5d0d1dc62946864090.png');
+}
+
+.main-card-item#swf {
+  /*background-image: url('/images/index/sdf-bg.png');*//*微信暂不支持静态bgimg文件，改用服务器url*/
+  background-image: url('https://z4a.net/images/2019/07/29/netFareBk9b1a72dabcc8947f.png');
 }
 
 .main-card-item navigator {
@@ -500,6 +516,13 @@ page .navigator-hover {
 
 .sdf-value {
   color: #ffbf92;
+  font-size: 46pt;
+  font-weight: bold;
+  padding: 0 15rpx;
+}
+
+.swf-value {
+  color: #0693d49c;
   font-size: 46pt;
   font-weight: bold;
   padding: 0 15rpx;
