canvas生成成绩单功能已经实现
- 继续完善canvas成绩单生成（成绩科目太少的图片会有大量空白。想办法优化）

--- a/pages/score/score.wxml
+++ b/pages/score/score.wxml
@@ -14,12 +14,9 @@
 
 
 
-  <!-- <view class="score__hd" wx:if="{{jsonContent}}">
-    <view style="display:none;">
-      <image src="{{shareImage}}" class="share-image"></image>
-      <canvasdrawer painting="{{painting}}" class="canvasdrawer" bind:getImage="eventGetImage" />
-    </view>
-    <button class="clear" bindtap="fullScreenPreview">
+  <view class="score__hd" wx:if="{{jsonContent}}">
+    <canvasdrawer painting="{{painting}}" class="canvasdrawer" bind:getImage="eventGetImage"/>
+    <button class="clear" bind:tap="eventDraw">
       <view class="weui-item border-shadow background-1">
         <view class="weui-flex">
           <view class="weui-flex__item">
@@ -32,7 +29,7 @@
         </view>
       </view>
     </button>
-  </view> -->
+  </view>
 
 
 
