通宵熬夜适配了新教务课表
- 删除班级课表，保留个人课表作为课表
- 个人课表适配新教教务系统课表
- 课表查询、成绩查询改为缓存展示手动更新式
- 教务相关接口升级为v4但还是不太理想
- 验证码页面改为验证码场景通用页面
-

--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -55,7 +55,7 @@
     </view>
 
     <!-- 教务关闭，无法访问 -->
-    <view class="main-card-item" id='jwClosed' wx:if="{{jsonStr.todayCourse.getCourseStatus == 500}}">
+    <!-- <view class="main-card-item" id='jwClosed' wx:if="{{jsonStr.todayCourse.getCourseStatus == 500}}">
       <view class="card-item-hd">
         <text class="card-item-icon">⚠</text>
         <text class="card-item-name">Error</text>🤕
@@ -68,7 +68,7 @@
           </view>
         </view>
       </view>
-    </view>
+    </view> -->
 
     <!--Hi-->
     <view class="main-card-item" id="ykt" wx:if='{{jsonStr.teachWeek != "N/A"}}'>
