--- a/pages/classQuery/index.wxss
+++ b/pages/classQuery/index.wxss
@@ -715,3 +715,25 @@ page .wx-swiper-dot {
 page .wx-swiper-dot-active {
   color: #fff;
 }
+/* 悬浮按钮的 */
+
+.round-click {
+  height: 120rpx;
+  width: 120rpx;
+  background-color: rgb(115, 180, 240);
+  border-radius: 100%;
+  position: fixed;
+  bottom: 120rpx;
+  right: 25rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+}
+
+.round-click text {
+  font-size: 32rpx;
+  max-width: 80rpx;
+  color: #fff;
+  text-align: center;
+}
