--- a/pages/classQuery/index.wxml
+++ b/pages/classQuery/index.wxml
@@ -71,6 +71,7 @@
         </view>
       </view>
 
+
       <!-- 遮罩层 -->
       <view bindtap="hideDetail" class="kb-detail" wx:if="{{blur}}">
         <view class="kb-detaile-card-ctn" style="top:{{targetY}}rpx;left:{{targetX}}rpx;">
@@ -99,6 +100,7 @@
     <view class="kb-info-title" wx:else>
       <text class="kb-info-week">{{classJson.teachWeek}}周{{classJson.dayOfWeek}}</text>
       <text class="kb-lesson-time">{{classJson.schoolYear}}学年第{{classJson.semester}}学期</text>
+      <text class="version-text" bindtap='refreshData'>更新课表</text>
       <image class="kb-info-card-close" src="/images/down_w.png" bindtap="hideDetail"></image>
     </view>
 
@@ -133,6 +135,9 @@
             </view>
           </view>
         </view>
+
+
+
 
         <view class="kb-info-card-content" wx:else>
           <view class="info-name">
