--- a/pages/score/score.wxss
+++ b/pages/score/score.wxss
@@ -188,3 +188,25 @@ button::after {
   left: 0;
   right: 0;
 }
+/* 悬浮按钮的 */
+
+.round-click {
+  height: 120rpx;
+  width: 120rpx;
+  background-color: rgb(142, 200, 248);
+  border-radius: 100%;
+  position: fixed;
+  bottom: 50rpx;
+  right: 25rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+}
+
+.round-click text {
+  font-size: 32rpx;
+  max-width: 80rpx;
+  color: #fff;
+  text-align: center;
+}
