--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -20,15 +20,15 @@
         <view class="detail-list">
           <view class="detail-item">
             <text class="detail-item-label">姓名</text>
-            <text class="detail-item-value">{{jsonStr.name}}</text>
+            <text class="detail-item-value">{{name}}</text>
           </view>
           <view class="detail-item">
             <text class="detail-item-label">班级</text>
-            <text class="detail-item-value">{{jsonStr.classroom}}</text>
+            <text class="detail-item-value">{{classroom}}</text>
           </view>
           <view class="detail-item">
             <text class="detail-item-label">学号</text>
-            <text class="detail-item-value">{{jsonStr.number}}</text>
+            <text class="detail-item-value">{{uid}}</text>
           </view>
         </view>
       </view>
