--- a/pages/features/features.wxml
+++ b/pages/features/features.wxml
@@ -33,7 +33,7 @@
   <view class="page__bd" style='background-color:rgb(240,239,245);'>
 
     <!--功能导航-->
-    <swiper class="main-swpier radius">
+    <swiper class="main-swpier radius" indicator-dots="true">
       <swiper-item class="main-core" wx:for="{{cores}}" wx:for-item="core" wx:key="id">
         <block wx:for="{{core}}" wx:key="id">
           <view class="main-core-item disabled" bindtap="disabled_item" data-item='{{item.id}}' data-sindex='{{index}}'>
